<resources>
    <string name="app_name">Mahabbah</string>
    <string name="title_user">Pengguna</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_webview">Webview</string>
    <string name="title_adduser">Tambah Pengguna</string>
    <string name="hint_caridata">Cari Data</string>
    <string name="form_title1">Data Diri</string>
    <string name="form_title2">Data Kontak</string>
    <string name="form_title3">Data Indentitas</string>
    <string name="form_title4">Data Perbankan</string>
    <string name="form_adduser_nama">Nama</string>
    <string name="form_adduser_namaayah">Nama Ayah</string>
    <string name="form_adduser_marga">Marga</string>
    <string name="form_adduser_status">Status</string>
    <string name="form_adduser_nohp">Nomor Handphone</string>
    <string name="form_adduser_email">Email</string>
    <string name="form_adduser_wilayah">Wilayah</string>
    <string name="form_adduser_alamat_sekarang">Alamat Sekarang</string>
    <string name="form_adduser_nikktp">NIK KTP</string>
    <string name="form_adduser_tempatlahir">Tempat Lahir</string>
    <string name="form_adduser_tanggallahir">Tanggal Lahir</string>
    <string name="form_adduser_namabank">Nama Bank</string>
    <string name="form_adduser_nomorrekening">Nomor Rekening</string>
    <string name="form_adduser_action_save">Simpan Data</string>
    <string name="form_helper_required">wajib di isi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="list_bank">
        <item>BCA</item>
        <item>Mandiri</item>
        <item>BNI</item>
        <item>BRI</item>
    </string-array>
</resources>