<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_adduser"
        android:name="com.randfiq.mahabbah.ui.user.AddUserFragment"
        android:label="@string/title_adduser"
        tools:layout="@layout/fragment_add_user" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.randfiq.mahabbah.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_navigation_adduser"
            app:destination="@id/navigation_adduser" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.randfiq.mahabbah.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.randfiq.mahabbah.ui.WebviewFragment"
        android:label="@string/title_webview"
        tools:layout="@layout/fragment_webview" />
</navigation>